--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express-session": "^1.18.1",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.13.1",
+    "html-react-parser": "^5.2.5",
     "i18next": "^25.1.3",
     "i18next-http-backend": "^3.0.2",
     "input-otp": "^1.4.2",
